tests/invalid/complexity.nim
if i == 1 and b == 2:
  i = i + 1
